Color Attributes linked between unliked object data when using sculpt mode #113665

Closed
opened 2023-10-13 12:36:34 +02:00 by Julien Kaspar · 3 comments
Member

System Information
Operating system: Linux-6.5.6-gentoo-x86_64-AMD_Ryzen_Threadripper_1950X_16-Core_Processor-with-glibc2.37 64 Bits, X11 UI
Graphics card: AMD Radeon RX 7900 XT (gfx1100, LLVM 16.0.6, DRM 3.54, 6.5.6-gentoo) AMD 4.6 (Core Profile) Mesa 23.2.1

Blender Version
Broken: version: 4.1.0 Alpha, branch: main, commit date: 2023-10-12 18:56, hash: 4320f1a21750
Worked: 3.5.1

Propably caused by 7eee378ecc

Short description of error
When duplicating an object and painting color attributes on either in sculpt mode, the color attribute will be changed on both.
This is only observable once switching to a non-object mode on the other object.
If any of the objects are ever painted in vertex paint mode, they are no longer in synch and the bug will never occur again.

Exact steps for others to reproduce the error

  • Enter sculpt mode
  • Paint a color attribute with the paint brush
  • In object mode, duplicate the object
  • Paint more in sculpt mode in either object
  • Switch to the other object (notice how the colors are updated to the latest changes of the previous object)
  • Paint some more in vertex paint mode
  • Switch to the other object (Now the bug didn't occur)
**System Information** Operating system: Linux-6.5.6-gentoo-x86_64-AMD_Ryzen_Threadripper_1950X_16-Core_Processor-with-glibc2.37 64 Bits, X11 UI Graphics card: AMD Radeon RX 7900 XT (gfx1100, LLVM 16.0.6, DRM 3.54, 6.5.6-gentoo) AMD 4.6 (Core Profile) Mesa 23.2.1 **Blender Version** Broken: version: 4.1.0 Alpha, branch: main, commit date: 2023-10-12 18:56, hash: `4320f1a21750` Worked: 3.5.1 Propably caused by 7eee378eccc8 **Short description of error** When duplicating an object and painting color attributes on either in sculpt mode, the color attribute will be changed on both. This is only observable once switching to a non-object mode on the other object. If any of the objects are ever painted in vertex paint mode, they are no longer in synch and the bug will never occur again. **Exact steps for others to reproduce the error** - Enter sculpt mode - Paint a color attribute with the paint brush - In object mode, duplicate the object - Paint more in sculpt mode in either object - Switch to the other object (notice how the colors are updated to the latest changes of the previous object) - Paint some more in vertex paint mode - Switch to the other object (Now the bug didn't occur)
Julien Kaspar added the
Severity
Normal
Type
Report
Status
Needs Triage
labels 2023-10-13 12:36:34 +02:00

Here in both cases other object is updated to changes in previous. I have bit older build so will have to re-check.

Here in both cases other object is updated to changes in previous. I have bit older build so will have to re-check.
Member

Can confirm, will check

Can confirm, will check
Philipp Oeser added
Status
Confirmed
Module
Sculpt, Paint & Texture
and removed
Status
Needs Triage
labels 2023-10-16 11:02:10 +02:00
Member

Pretty sure this is caused by attribute sharing 7eee378ecc

CC @JacquesLucke

Pretty sure this is caused by attribute sharing 7eee378eccc8 CC @JacquesLucke
Hans Goudey self-assigned this 2023-10-23 11:57:35 +02:00
Hans Goudey added
Type
Bug
and removed
Type
Report
labels 2023-10-24 19:30:10 +02:00
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2023-10-24 20:19:27 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset System
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Code Documentation
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Viewport & EEVEE
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Asset Browser Project
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Module
Viewport & EEVEE
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Severity
High
Severity
Low
Severity
Normal
Severity
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#113665
No description provided.